@@ -1,10 +1,22 @@
-<project>
+<project xmlns:pom="http://maven.apache.org/POM/4.0.0">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>sample-framework</groupId>
 	<artifactId>start-web</artifactId>
 	<version>live</version>
 	<build>
-		<sourceDirectory>code</sourceDirectory>
+	 <plugins>
+	  <plugin>
+	   <groupId>org.apache.maven.plugins</groupId>
+	   <artifactId>maven-compiler-plugin</artifactId>
+	   <version>3.11.0</version>
+	   <configuration>
+	    <compilerArgs>
+	     <arg>--enable-preview</arg>
+	    </compilerArgs>
+	   </configuration>
+	  </plugin>
+	 </plugins>
+	 <sourceDirectory>code</sourceDirectory>
 		<testSourceDirectory>test</testSourceDirectory>
 	</build>
 	<properties>
